[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3

[dependencies]
itertools = "0.12.0"
regex = "1.10.2"
z3 = {version="0.12.1", features = ["static-link-z3"]}


[dev-dependencies]
pretty_assertions = "1.4.0"
